--- a/iris-sensortag/index.html
+++ b/iris-sensortag/index.html
@@ -9,13 +9,14 @@
 <body ng-controller="MainCtrl">
 	<div class="parallax parallax-1">
 		<h1 class="title">HealthTag</h1>
+		<h2 class="title-sub">Blah Blah Blah ...</h2>
 	</div>
 	<div class="parallax parallax-2">
-		<h1 class="title" ng-class="{'red':class_2}">Android<br />Interface</h1>
-		<h2></h2>
+		<h1 class="title" ng-class="{'parallax-2-up': class_2}">Android<br />Interface</h1>
+		<h2 ng-class="{'parallax-2-left': class_android}">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
 	</div>
 	<div class="parallax parallax-10">
-		<h1 class="title">IriS</h1>
+		<h1 class="title" ng-class="{'parallax-10-show': class_10}">IriS</h1>
 	</div>
 </body>
 </html>
