--- a/iris-sensortag/index.html
+++ b/iris-sensortag/index.html
@@ -9,11 +9,14 @@
 <body ng-controller="MainCtrl">
 	<div class="parallax parallax-1">
 		<h1 class="title">HealthTag</h1>
-		<h2 class="title-sub">Blah Blah Blah ...</h2>
+		<h2 class="title-sub">Real-Time World-Wide Health Monitoring</h2>
 	</div>
 	<div class="parallax parallax-2">
-		<h1 class="title" ng-class="{'parallax-2-up': class_2}">Android<br />Interface</h1>
-		<h2 ng-class="{'parallax-2-left': class_android}">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
+		<h1 class="title" ng-class="{'parallax-2-up': class_2}">Android Interface</h1>
+		<h2 ng-class="{'parallax-2-left': class_android}">Connects to an Android device to get real time measurements of _________. Recorded measurements can be pushed to cloud service Azure.</h2>
+	</div>
+	<div class="parallax parallax-3">
+		<h1 class="title">Geolocation</h1>
 	</div>
 	<div class="parallax parallax-10">
 		<h1 class="title" ng-class="{'parallax-10-show': class_10}">IriS</h1>
