--- a/iris-sensortag/index.html
+++ b/iris-sensortag/index.html
@@ -17,6 +17,11 @@
 	</div>
 	<div class="parallax parallax-3">
 		<h1 class="title">Geolocation</h1>
+		<h2>Pinpoint exactly where data are being collected.</h2>
+	</div>
+	<div class="parallax parallax-4">
+		<h1 class="title">Geolocation</h1>
+		<h2>Blah Blah Blah ... Blah Blah Blah ... Blah Blah Blah ... Blah Blah Blah ... Blah Blah Blah ... </h2>
 	</div>
 	<div class="parallax parallax-10">
 		<h1 class="title" ng-class="{'parallax-10-show': class_10}">IriS</h1>
