--- a/iris-sensortag/index.html
+++ b/iris-sensortag/index.html
@@ -9,7 +9,12 @@
 <body ng-controller="MainCtrl">
 	<div class="parallax parallax-1">
 		<h1 class="title">HealthTag</h1>
-		<h2 class="title-sub">Real-Time World-Wide Health Monitoring</h2>
+		<h2 class="title-sub">Real-Time Worldwide Health Monitoring</h2>
+	</div>
+	<div class="parallax parallax-9">
+		<h1 class="title">Instrumentation</h1>
+		<h2>Measure and collect stats of the human body and environment using a TI SensorTag
+			  while interfacing with our cloud.</h2>
 	</div>
 	<div class="parallax parallax-2">
 		<h1 class="title" ng-class="{'parallax-2-up': class_2}">Android Interface</h1>
@@ -20,8 +25,9 @@
 		<h2>Pinpoint exactly where data are being collected.</h2>
 	</div>
 	<div class="parallax parallax-4">
-		<h1 class="title">Geolocation</h1>
-		<h2>Blah Blah Blah ... Blah Blah Blah ... Blah Blah Blah ... Blah Blah Blah ... Blah Blah Blah ... </h2>
+		<h1 class="title">Analytics</h1>
+		<h2>Measure and collect stats of the human body and environment using a TI SensorTag
+			  while building trends with our cloud.</h2>
 	</div>
 	<div class="parallax parallax-10">
 		<h1 class="title" ng-class="{'parallax-10-show': class_10}">IriS</h1>
