--- a/iris-sensortag/index.html
+++ b/iris-sensortag/index.html
@@ -18,7 +18,7 @@
 	</div>
 	<div class="parallax parallax-2">
 		<h1 class="title" ng-class="{'parallax-2-up': class_2}">Android Interface</h1>
-		<h2 ng-class="{'parallax-2-left': class_android}">Connects to an Android device to get real time measurements of _________. Recorded measurements can be pushed to cloud service Azure.</h2>
+		<h2 ng-class="{'parallax-2-left': class_android}">Connects to an Android device and displays real-time measurements of body temperature, room humidity, etc. Recorded measurements can be pushed to cloud service Azure and run data analysis.</h2>
 	</div>
 	<div class="parallax parallax-3">
 		<h1 class="title">Geolocation</h1>
